[package]
categories = ["wasm", "game-development"]
description = "Run WASM systems in Bevy"
edition = "2021"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm"
readme = "../README.md"
repository = "https://github.com/BrandonDyer64/bevy_wasm"
version = "0.14.2"

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy_wasm_shared.workspace = true
bincode.workspace = true
colored.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime.workspace = true
wasi-common.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
