[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "simple_mod"
publish = false
version = "0.1.0"

[lib]
# Generate a `.wasm` file instead of a dll
crate-type = ["cdylib"]

[dependencies]
bevy.workspace = true
bevy_wasm_sys.workspace = true
serde.workspace = true
simple_protocol.workspace = true
